# RotaFi

./: deployments.json  hardhat.config.js  index.html  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.js
contracts/: PolDOT.sol  PolUSDC.sol  RotaFiCircle.sol  RotaFiFactory.sol
contracts/rotafi/: Cargo.toml
contracts/rotafi/src/: lib.rs
scripts/: deploy.js  get-circles.js  seed.js  verify.cjs  verify.js
src/: App.jsx  index.css  main.jsx  theme.js  wagmi.js
src/components/: AppShell.jsx  ConnectPrompt.jsx  CreateModal.jsx  ui.jsx
src/contract/: abi.json  api.js
src/contracts/: PolDOT.json  PolUSDC.json  RotaFiCircle.json  RotaFiFactory.json  deployments.json  index.js
src/hooks/: useAppState.jsx  useCircle.js  usePolkadot.js  useTheme.jsx
src/pages/: CircleDetailPage.jsx  HistoryPage.jsx  JoinCirclePage.jsx  LandingPage.jsx  MyCirclesPage.jsx  NotFoundPage.jsx  OverviewPage.jsx  ProfilePage.jsx
src/styles/: global.css
test/: RotaFiCircle.test.js  RotaFiFactory.test.js
