[package]
name    = "rotafi"
version = "1.0.0"
authors = ["RotaFi"]
edition = "2021"

[lib]
name      = "rotafi"
path      = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default            = ["std"]
std                = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency  = []

[dependencies]
ink        = { version = "4.3", default-features = false }
scale      = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "4.3" }

[profile.release]
overflow-checks = false   # saves ~200 bytes
opt-level       = "z"
lto             = true
codegen-units   = 1
